# ners570f21-Lab06

./: CMakeLists.txt
src/: CMakeLists.txt  hello.cpp  hello.hpp
test/: CMakeLists.txt  testHello.cpp
